[package]
name = "rae-rust"
version = "0.1.1"
authors = ["David Garcia <davgarmor2@alum.us.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
cssparser = "0.27.2"
selectors = "0.22.0"
serde = { version = "*", features = ["derive"] }